--- a/SplashUp/appsettings.json
+++ b/SplashUp/appsettings.json
@@ -17,7 +17,7 @@
     "DebugPath": "D:\\Debug\\",
     "KeepDay": 1,
     // Дата начала загрузки с FTP по ФЗ 44/223 - ограничение для того что бы не грузить всё что есть
-    "StartDate": "2020-01-01",
+    "StartDate": "2020-07-01",
     "PartUsed": {
       "UseUpload": true,
       "UseFz44Settings": true,
@@ -39,12 +39,13 @@
 
     }
   },
-  "ConnectionDB": {
-    "ConnectionGDB": "Host=192.168.1.120;Port=5432;Database=AimGov2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True",
-    "ConnectionDB2": "2STORAGE-CONNECTION-STRING2"
-  },
+  //"ConnectionDB": {
+  //  "ConnectionGDB": "Host=192.168.1.120;Port=5432;Database=AimGov2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True",
+  //  "ConnectionDB2": "2STORAGE-CONNECTION-STRING2"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimGov2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True"
+    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDb2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True",
+    "ConnectionGDB": "Host=192.168.1.120;Port=5432;Database=AimDb2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True"
   },
   // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
