--- a/SplashUp/SplashUp.csproj
+++ b/SplashUp/SplashUp.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>SplashUp.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="appsettings - Copy.json" />
+    <Compile Remove="Models\Ext\**" />
+    <EmbeddedResource Remove="Models\Ext\**" />
+    <None Remove="Models\Ext\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json" />
   </ItemGroup>
 
@@ -38,10 +44,6 @@
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Ext\" />
   </ItemGroup>
 
 </Project>
