--- a/SplashUp/appsettings.linux.json
+++ b/SplashUp/appsettings.linux.json
@@ -37,7 +37,7 @@
   },
 
   "ConnectionDB": {
-    "ConnectionGDB": "Host=192.168.1.60;Port=5432;Database=AimGov2;Username=postgres;Password=Zaq1Xsw2Z;Pooling=True",
+    "ConnectionGDB": "Host=192.168.1.60;Port=5432;Database=AimDb2;Username=postgres;Password=Zaq1Xsw2Z;Pooling=True",
     "ConnectionDB2": "2STORAGE-CONNECTION-STRING2"
   },
   // настройки ФЗ-44 "/{BaseDir}/{region}/notifications/" + контракты "/fcs_regions/{region}/contracts/" +  протоколы $"/fcs_regions/{region}/protocols/
