--- a/SplashUp/appsettings.json
+++ b/SplashUp/appsettings.json
@@ -11,12 +11,12 @@
     }
   },
 
-  //Общие настройки для всех JOB
+  //пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ JOB
   "CommonSettings": {
-    "BasePath": "D:\\Work2\\",
-    "DebugPath": "D:\\Debug\\",
+    "BasePath": "E:\\Work2\\",
+    "DebugPath": "E:\\Debug\\",
     "KeepDay": 1,
-    // Дата начала загрузки с FTP по ФЗ 44/223 - ограничение для того что бы не грузить всё что есть
+    // пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ FTP пїЅпїЅ пїЅпїЅ 44/223 - пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
     "StartDate": "2020-07-01",
     "PartUsed": {
       "UseUpload": true,
@@ -44,12 +44,12 @@
   //  "ConnectionDB2": "2STORAGE-CONNECTION-STRING2"
   //},
   "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDb2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True",
-    "ConnectionGDB": "Host=192.168.1.120;Port=5432;Database=AimDb2;Username=postgres;Password=Qs73Uq87zaq;Pooling=True"
+    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbtest;Username=zaq;Password=Zaq1Xsw2;Pooling=True",
+    "ConnectionGDB": "Host=192.168.1.60;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True"
   },
-  // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
-    "WorkPath": "D:\\Work2\\Fz223\\",
+    "WorkPath": "E:\\Work2\\Fz223\\",
     "RunEveryDay": 1,
     "Parallels": 2,
     "RunAtTime": "00:20:00",
@@ -59,9 +59,9 @@
     "_DirsDocs": "contracts",
     "DirsDocs": "purchaseNotice,purchaseNoticeAE,purchaseNoticeAE94,purchaseNoticeEP,purchaseNoticeIS,purchaseNoticeOA,purchaseNoticeOK,purchaseNoticeZK,purchaseNoticeAESMBO,purchaseNoticeKESMBO,purchaseNoticeZKESMBO,purchaseNoticeZPESMBO"
   },
-  // настройки ФЗ-44 "/{BaseDir}/{region}/notifications/" + контракты "/fcs_regions/{region}/contracts/" +  протоколы $"/fcs_regions/{region}/protocols/
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-44 "/{BaseDir}/{region}/notifications/" + пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ "/fcs_regions/{region}/contracts/" +  пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ $"/fcs_regions/{region}/protocols/
   "FzSettings44": {
-    "WorkPath": "D:\\Work2\\Fz44\\",
+    "WorkPath": "E:\\Work2\\Fz44\\",
     "RunEveryDay": 1,
     "Parallels": 4,
     "Queue": 100,
@@ -72,9 +72,9 @@
     "_DirsDocs": "contracts",
     "DirsDocs": "notifications,contracts,protocols,contractprojects,notificationExceptions"
   },
-  // настройки справочников ФЗ-223 "/{BaseDir}/{DirsDocs}/"
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-223 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings223": {
-    "WorkPath": "D:\\Work2\\Fz223\\",
+    "WorkPath": "E:\\Work2\\Fz223\\",
     "RunEveryDay": 1,
     "Parallels": 2,
     "Queue": 100,
@@ -85,9 +85,9 @@
     "DirsDocs": "nsiOrganization",
     "NsiVSRZ": "out/nsiVSRZ"
   },
-  // настройки справочников ФЗ-44 "/{BaseDir}/{DirsDocs}/"
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-44 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings44": {
-    "WorkPath": "D:\\Work2\\Fz44\\",
+    "WorkPath": "E:\\Work2\\Fz44\\",
     "RunEveryDay": 1,
     "Parallels": 15,
     "Queue": 100,
