--- a/SplashUp/appsettings.linux.json
+++ b/SplashUp/appsettings.linux.json
@@ -10,11 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  //Общие настройки для всех JOB
+  //пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ JOB
   "CommonSettings": {
     "BasePath": "..//FZ//Work2//",
     "KeepDay": 1,
-    // Дата начала загрузки с FTP по ФЗ 44/223
+    // пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ FTP пїЅпїЅ пїЅпїЅ 44/223
     "StartDate": "2020-01-01",
     "PartUsed": {
       "UseUpload": true,
@@ -40,7 +40,7 @@
     "ConnectionGDB": "Host=192.168.1.60;Port=5432;Database=AimDb2;Username=postgres;Password=Zaq1Xsw2Z;Pooling=True",
     "ConnectionDB2": "2STORAGE-CONNECTION-STRING2"
   },
-  // настройки ФЗ-44 "/{BaseDir}/{region}/notifications/" + контракты "/fcs_regions/{region}/contracts/" +  протоколы $"/fcs_regions/{region}/protocols/
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-44 "/{BaseDir}/{region}/notifications/" + пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ "/fcs_regions/{region}/contracts/" +  пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ $"/fcs_regions/{region}/protocols/
   "FzSettings44": {
     "WorkPath": "..//FZ//Work2//Fz44//",
     "RunEveryDay": 1,
@@ -54,7 +54,7 @@
     "DirsDocs": "notifications,contracts,protocols,contractprojects,notificationExceptions"
   },
 
-  // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
     "WorkPath": "..//FZ//Work2//Fz223//",
     "RunEveryDay": 1,
@@ -68,7 +68,7 @@
   },
 
 
- // настройки справочников ФЗ-44 "/{BaseDir}/{DirsDocs}/"
+ // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-44 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings44": {
     "WorkPath": "..//FZ//Work2//Fz44//",
     "RunEveryDay": 1,
@@ -81,7 +81,7 @@
     "DirsDocs": "nsiAbandonedReason,nsiOrganization,nsiPlacingWay,nsiAbandonedReason,nsiETP"
   },
 
-  // настройки справочников ФЗ-223 "/{BaseDir}/{DirsDocs}/"
+  // пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ-223 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings223": {
     "WorkPath": "..//FZ//Work2//Fz223//",
     "RunEveryDay": 1,
