--- a/SplashUp/nlog.linux.config
+++ b/SplashUp/nlog.linux.config
@@ -3,33 +3,33 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="info"
-      internalLogFile="E:\Work2\Logs\internal-log.txt">
+      internalLogFile="/var/log/SplashUp/internal-log.txt">
 
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
-    <target name="allfile" xsi:type="File"             
+    <target name="allfile" xsi:type="File"
             layout="${longdate}|${uppercase:${level}}|${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}|${message} ${exception:format=tostring}"
-            fileName="E:\Work2\Logs\log-all-${shortdate}.log"
-            archiveFileName="E:\Work2\Logs\archives\log-all.{#}.log"
+            fileName="/var/log/SplashUp/log-all-${shortdate}.log"
+            archiveFileName="/var/log/SplashUp/archives/log-all.{#}.log"
 	    archiveDateFormat="yyyy-MM-dd"
             archiveEvery="Day"
             archiveNumbering="Rolling"
-            maxArchiveFiles="100"
+            maxArchiveFiles="30"
             concurrentWrites="true"
             keepFileOpen="false"
 	    archiveAboveSize="10485760"
             encoding="UTF-8" />
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
-    <target name="ownFile" xsi:type="File" 
+    <target name="ownFile" xsi:type="File"
             layout="${longdate}|${uppercase:${level}}|${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}|${message} ${exception:format=tostring}"
-            fileName="E:\Work2\Logs\log-own-${shortdate}.log"
-            archiveFileName="E:\Work2\Logs\archives\log-own.{#}.log"
+            fileName="/var/log/SplashUp/log-own-${shortdate}.log"
+            archiveFileName="/var/SplashUp/archives/log-own.{#}.log"
 	    archiveDateFormat="yyyy-MM-dd"
             archiveEvery="Day"
             archiveNumbering="Rolling"
-            maxArchiveFiles="100"
+            maxArchiveFiles="30"
             concurrentWrites="true"
             keepFileOpen="false"
 	    archiveAboveSize="10485760"
