--- a/SplashUp/appsettings.json
+++ b/SplashUp/appsettings.json
@@ -3,7 +3,6 @@
     "Console": {
       "IncludeScopes": true
     },
-//    "IncludeScopes": true,
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Information",
@@ -13,20 +12,21 @@
 
   //Общие настройки для всех JOB
   "CommonSettings": {
-    "BasePath": "F:\\Work2\\",
-    "DebugPath": "F:\\Debug\\",
-    "BasePartition": "F:\\",
+    "BasePath": "E:\\Work2\\",
+    "DebugPath": "E:\\Debug\\",
+    "BasePartition": "E:\\",
     "KeepDay": 1,
     // Дата начала загрузки с FTP по ФЗ 44/223
     "StartDate": "2020-07-01",
     //Доступное место на диске необходимое для работы % от всего
-    "FreeDS": 80,
+    "FreeDS": 40,
     "PartUsed": {
       "UseUpload": true,
       "UseFz44Settings": true,
       "UseFz223Settings": true,
       "UseNsiSettings44": true,
-      "UseNsiSettings223": true
+      "UseNsiSettings223": true,
+      "TestMode": true
     },
     "FtpCredential": {
       "FZ44": {
@@ -44,11 +44,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbEF6;Username=zak;Password=Zaq1Xsw2;Pooling=True",
-    "ConnectionGDB": "Host=192.168.1.60;Port=5432;Database=AimDbEF6;Username=zak;Password=Zaq1Xsw2;Pooling=True"
+    "ConnectionGDB": "Host=192.168.7.15;Port=5432;Database=AimDbEF6;Username=zak;Password=Zaq1Xsw2;Pooling=True"
   },
   // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
-    "WorkPath": "F:\\Work2\\Fz223\\",
+    "WorkPath": "E:\\Work2\\Fz223\\",
     "RunEveryDay": 1,
     "Parallels": 2,
     "RunAtTime": "00:20:00",
@@ -60,9 +60,9 @@
   },
   // настройки ФЗ-44 "/{BaseDir}/{region}/notifications/" + контракты "/fcs_regions/{region}/contracts/" +  протоколы $"/fcs_regions/{region}/protocols/
   "FzSettings44": {
-    "WorkPath": "F:\\Work2\\Fz44\\",
+    "WorkPath": "E:\\Work2\\Fz44\\",
     "RunEveryDay": 1,
-    "Parallels": 4,
+    "Parallels": 1,
     "Queue": 100,
     "RunAtTime": "00:10:00",
     "EmptyZipSize": "22",
@@ -73,7 +73,7 @@
   },
   // настройки справочников ФЗ-223 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings223": {
-    "WorkPath": "F:\\Work2\\Fz223\\",
+    "WorkPath": "E:\\Work2\\Fz223\\",
     "RunEveryDay": 1,
     "Parallels": 2,
     "Queue": 100,
@@ -86,7 +86,7 @@
   },
   // настройки справочников ФЗ-44 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings44": {
-    "WorkPath": "F:\\Work2\\Fz44\\",
+    "WorkPath": "E:\\Work2\\Fz44\\",
     "RunEveryDay": 1,
     "Parallels": 15,
     "Queue": 100,
