Updates and fix + add ContractProject

--- a/Linux/appsettings.json
+++ b/Linux/appsettings.json
@@ -12,20 +12,20 @@
 
   //Общие настройки для всех JOB
   "CommonSettings": {
-    "BasePath": "F:\\Work2\\",
-    "DebugPath": "F:\\Work2\\Debug\\",
-    "BasePartition": "F:\\",
+    "BasePath": "/Work/",
+    "DebugPath": "/Work/Debug/",
+    "BasePartition": "/",
     "KeepDay": 1,
     // Дата начала загрузки с FTP по ФЗ 44/223
     "StartDate": "2020-07-01",
     //Доступное место на диске необходимое для работы % от всего
-    "FreeDS": 40,
+    "FreeDS": 50,
     "PartUsed": {
       "UseUpload": true,
       "UseFz44Settings": true,
-      "UseFz223Settings": false,
-      "UseNsiSettings44": false,
-      "UseNsiSettings223": false,
+      "UseFz223Settings": true,
+      "UseNsiSettings44": true,
+      "UseNsiSettings223": true,
       "TestMode": true
     },
     "FtpCredential": {
@@ -43,12 +43,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test",
-    "ConnectionGDB": "Host=192.168.7.15;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test"
+    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbEF6;Username=zak;Password=Zaq1Xsw2;Pooling=True",
+    "ConnectionGDB": "Host=192.168.7.15;Port=5432;Database=AimDbEF6;Username=zak;Password=Zaq1Xsw2;Pooling=True"
   },
   // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
-    "WorkPath": "F:\\Work2\\Fz223\\",
+    "WorkPath": "/Work/Fz223",
     "RunEveryDay": 1,
     "Parallels": 2,
     "RunAtTime": "00:20:00",
@@ -60,7 +60,7 @@
   },
   // настройки ФЗ-44 "/{BaseDir}/{region}/notifications/" + контракты "/fcs_regions/{region}/contracts/" +  протоколы $"/fcs_regions/{region}/protocols/
   "FzSettings44": {
-    "WorkPath": "F:\\Work2\\Fz44\\",
+    "WorkPath": "/Work/Fz44",
     "RunEveryDay": 1,
     "Parallels": 4,
     "Queue": 100,
@@ -73,7 +73,7 @@
   },
   // настройки справочников ФЗ-223 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings223": {
-    "WorkPath": "F:\\Work2\\Fz223\\",
+    "WorkPath": "/Work/Fz223",
     "RunEveryDay": 1,
     "Parallels": 2,
     "Queue": 100,
@@ -86,7 +86,7 @@
   },
   // настройки справочников ФЗ-44 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings44": {
-    "WorkPath": "F:\\Work2\\Fz44\\",
+    "WorkPath": "/Work/Fz44",
     "RunEveryDay": 1,
     "Parallels": 15,
     "Queue": 100,
