--- a/SplashUp/appsettings.json
+++ b/SplashUp/appsettings.json
@@ -21,7 +21,7 @@
     //Доступное место на диске необходимое для работы % от всего
     "FreeDS": 40,
     "PartUsed": {
-      "UseUpload": true,
+      "UseUpload": false,
       "UseFz44Settings": true,
       "UseFz223Settings": false,
       "UseNsiSettings44": false,
