--- a/SplashUp/appsettings.json
+++ b/SplashUp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test",
+    "ConnectionGDB": "Host=localhost;Port=5432;Database=AimDbtest;Username=postgres;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test"
+  },
   "Logging": {
     "Console": {
       "IncludeScopes": true
@@ -15,17 +19,17 @@
     "BasePath": "F:\\Work2\\",
     "DebugPath": "F:\\Work2\\Debug\\",
     "BasePartition": "F:\\",
-    "KeepDay": 1,
+    "KeepDay": 0,
     // Дата начала загрузки с FTP по ФЗ 44/223
     "StartDate": "2020-07-01",
     //Доступное место на диске необходимое для работы % от всего
     "FreeDS": 40,
     "PartUsed": {
-      "UseUpload": false,
+      "UseUpload": true,
       "UseFz44Settings": true,
-      "UseFz223Settings": false,
-      "UseNsiSettings44": false,
-      "UseNsiSettings223": false,
+      "UseFz223Settings": true,
+      "UseNsiSettings44": true,
+      "UseNsiSettings223": true,
       "TestMode": true
     },
     "FtpCredential": {
@@ -42,10 +46,7 @@
 
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.1.120;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test",
-    "ConnectionGDB": "Host=192.168.7.15;Port=5432;Database=AimDbtest;Username=zak;Password=Zaq1Xsw2;Pooling=True;ApplicationName=test"
-  },
+
   // настройки ФЗ-223 "/{BaseDir}/{region}/{dir}/"
   "FzSettings223": {
     "WorkPath": "F:\\Work2\\Fz223\\",
@@ -68,8 +69,8 @@
     "EmptyZipSize": "22",
     "Regions": "Moskva,Adygeya_Resp,Moskovskaya_obl",
     "BaseDir": "fcs_regions",
-    "_DirsDocs": "contracts",
-    "DirsDocs": "notifications,contracts,protocols,contractprojects,notificationExceptions"
+    "DirsDocs": "contracts",
+    "_DirsDocs": "notifications,contracts,protocols,contractprojects,notificationExceptions"
   },
   // настройки справочников ФЗ-223 "/{BaseDir}/{DirsDocs}/"
   "NsiSettings223": {
